{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 34,
  "lineage": "3bd4a3a5-4e92-214f-4b63-63003730717b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b99813fc7fa89e60",
            "arn": "arn:aws:ec2:us-west-2:065915236794:elastic-ip/eipalloc-0b99813fc7fa89e60",
            "domain": "vpc",
            "id": "eipalloc-0b99813fc7fa89e60",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-68-200-107.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.200.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ac96f0583b2759e",
            "arn": "arn:aws:ec2:us-west-2:065915236794:elastic-ip/eipalloc-04ac96f0583b2759e",
            "domain": "vpc",
            "id": "eipalloc-04ac96f0583b2759e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-252-246-64.us-west-2.compute.amazonaws.com",
            "public_ip": "44.252.246.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d412c0b119c210c0",
            "arn": "arn:aws:ec2:us-west-2:065915236794:elastic-ip/eipalloc-0d412c0b119c210c0",
            "domain": "vpc",
            "id": "eipalloc-0d412c0b119c210c0",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-225-29-103.us-west-2.compute.amazonaws.com",
            "public_ip": "44.225.29.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-eip-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:internet-gateway/igw-02f287bb9b9250c0f",
            "id": "igw-02f287bb9b9250c0f",
            "owner_id": "065915236794",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b99813fc7fa89e60",
            "association_id": "eipassoc-0e6745c7edc92e91a",
            "connectivity_type": "public",
            "id": "nat-0bb5023c3639d51c0",
            "network_interface_id": "eni-087b87fab6a387c47",
            "private_ip": "10.0.1.48",
            "public_ip": "54.68.200.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00825d8563cb0dddf",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ac96f0583b2759e",
            "association_id": "eipassoc-0f92dae445ea73b8e",
            "connectivity_type": "public",
            "id": "nat-01961caa07a17cabf",
            "network_interface_id": "eni-0d52cd7369704075a",
            "private_ip": "10.0.2.232",
            "public_ip": "44.252.246.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e9af856db2a3bca",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d412c0b119c210c0",
            "association_id": "eipassoc-0c0ea80b6d85909b9",
            "connectivity_type": "public",
            "id": "nat-059b2ba6da3558696",
            "network_interface_id": "eni-051cdbde3a26c5bf4",
            "private_ip": "10.0.3.70",
            "public_ip": "44.225.29.103",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb8bc5629c93ce13",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-nat-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-nat-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:route-table/rtb-0ed0d451332b5a58b",
            "id": "rtb-0ed0d451332b5a58b",
            "owner_id": "065915236794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb5023c3639d51c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:route-table/rtb-032447fb32d5a34e2",
            "id": "rtb-032447fb32d5a34e2",
            "owner_id": "065915236794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01961caa07a17cabf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:route-table/rtb-0c9eaaaca7b20dfc9",
            "id": "rtb-0c9eaaaca7b20dfc9",
            "owner_id": "065915236794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059b2ba6da3558696",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:route-table/rtb-0ff616356fa8a820b",
            "id": "rtb-0ff616356fa8a820b",
            "owner_id": "065915236794",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f287bb9b9250c0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa843f14647bc69",
            "route_table_id": "rtb-0ed0d451332b5a58b",
            "subnet_id": "subnet-028104ddffec55aeb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a05875026c650da",
            "route_table_id": "rtb-032447fb32d5a34e2",
            "subnet_id": "subnet-0e0aac32e2c490210"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8ce8aa347104f9",
            "route_table_id": "rtb-0c9eaaaca7b20dfc9",
            "subnet_id": "subnet-03878ebe00d37e04b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d69cceaff33106ac",
            "route_table_id": "rtb-0ff616356fa8a820b",
            "subnet_id": "subnet-00825d8563cb0dddf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022232f7b8874e1a9",
            "route_table_id": "rtb-0ff616356fa8a820b",
            "subnet_id": "subnet-07e9af856db2a3bca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064635ffcc4209c30",
            "route_table_id": "rtb-0ff616356fa8a820b",
            "subnet_id": "subnet-0eb8bc5629c93ce13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:subnet/subnet-028104ddffec55aeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028104ddffec55aeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065915236794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-subnet-1",
              "Type": "private"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:subnet/subnet-0e0aac32e2c490210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0aac32e2c490210",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065915236794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-subnet-2",
              "Type": "private"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:subnet/subnet-03878ebe00d37e04b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03878ebe00d37e04b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065915236794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-subnet-3",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-private-subnet-3",
              "Type": "private"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:subnet/subnet-00825d8563cb0dddf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00825d8563cb0dddf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065915236794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:subnet/subnet-07e9af856db2a3bca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e9af856db2a3bca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065915236794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:subnet/subnet-0eb8bc5629c93ce13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb8bc5629c93ce13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "065915236794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-subnet-3",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc-public-subnet-3",
              "Type": "public"
            },
            "vpc_id": "vpc-05e47bed25a56c2d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:065915236794:vpc/vpc-05e47bed25a56c2d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f48100dc900644cf",
            "default_route_table_id": "rtb-08229bacdcd29989a",
            "default_security_group_id": "sg-08b247d27d7aab264",
            "dhcp_options_id": "dopt-0836a893937a83b4a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e47bed25a56c2d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08229bacdcd29989a",
            "owner_id": "065915236794",
            "tags": {
              "Environment": "dev",
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}